$Id$
Version 1.1.3+CVS (?? ??? 2006)
 - Fixed bug [ 1620626 ] Self Register broke in v1.1.2 (requires public)
 - Fixed bug [ 1623662 ] Additional Timezone for ical parsing logic
 - Fixed bug: gradient backgrounds would fail if images/cache is not
   writable due to bug in PHP's is_writeable function.
 - Fixed bug [ Help / Troubleshooting] Help needed getting Webcalendar to work
 - Fixed bug [ 1610640 ] changing option-description of 'advanced search' for a
 - Fixed bug [ 1615563 ] user can remove his own admin-permisssions
 - Updated Basque translation (based on 1.0 update)
 - Fixed bug [ 1618864 ] EXTRA_SELECTION_LIST versus EXTRA_SELECTLIST in site_extras
 - Fixed bug [ 1615896 ] Repeating Event Exclusions Broken
 - Fixed bug [ 1617800 ] 'Update Task Precentage' doesn't create activity log
 - Fixed bug [ 1618335 ] "Column 'cal_is_public' cannot be null" when adding NUC
 - Fixed bug [ 1617805 ] missing LINK to Craig's site if using 'top-menue'
 - Fixed bug [ 1617595 ] edit_template.php Error
 - Fixed bug [ 1617983 ] 'previous' and 'next' arrows didn't work at 'pop-up'-minical
Version 1.1.2 (18 Dec 2006)
 - Fix in dbi4php.php when translate is not yet defined
 - Created new function get_users_event_ids ()
 - Created new getPredefinedVariable.php that contains all getXxxValue functions
 - Fixed bug [ 1612332 ] empty exports with date limits
 - Fixed bug [ 1445428 ] Import needs utf8_decode()
 - Fixed bug [ 1614644 ] Remote subscriptions don't work with umlauts (Sunbird)
 - Implemented PATCH [ webcalendar-Bugs-1615738 ] EMAIL_EVENT_CREATE pref don't get invisible
 - Updated German.txt for ws/event_mod.php and ws/user_mod.php.
 - Fix bug [ 1614167 ] adjusted bg-image not working at views
   Cut the wrong set of dupe code the first time.
 - Updated German.txt. Thanks Markus.
 - Fix typo [webcalendar - Help / Troubleshooting] Tiny error in "styles.php" v.1.197
 - Applied PATCH [ 1221369 ] upgrade docs <-> Postgresql