@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fixed bug [ 1627932 ] issue sorting untimed events in month view
  - Fixed bug [ 1620626 ] Self Register broke in v1.1.2 (requires public)
  - Fixed bug [ 1623662 ] Additional Timezone for ical parsing logic
  - Fixed bug: gradient backgrounds would fail if images/cache is not
